k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pl-prediction
  labels:
    app: pl-predictor
