k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pl-predictor-ingress
  namespace: pl-prediction
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pl-predictor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pl-predictor-svc
                port:
                  number: 80
